W-15838197: Remove APIs from mule exposing removed java ee classes/interfaces