@@ -54,6 +54,7 @@
                         <configuration>
                             <compilerArgs>
                                 <arg>--add-exports=org.mule.runtime.extensions.api/org.mule.runtime.extension.internal.loader=org.mule.runtime.extensions.spring.support</arg>
+                                <arg>--add-exports=org.mule.runtime.core/org.mule.runtime.core.internal.transaction=ALL-UNNAMED</arg>
                             </compilerArgs>
                         </configuration>
                     </execution>
